Feature: add global exception handler, api error class
